2003-06-19  Dan Winship  <danw@ximian.com>

	* libsoup/soup-queue.c (soup_queue_read_done_cb): unref the
	old read_tag before changing/clearing it.
	(soup_queue_write_done_cb): Likewise with the write_tag.

	* libsoup/soup-transfer.c (issue_final_callback): ref the reader
	around the stop+callback.
	(soup_transfer_write_cb): Likewise.

2003-06-12  Dan Winship  <danw@ximian.com>

	* libsoup/soup-transfer.c (SoupReader, SoupWriter): add a
	ref_count field.
	(soup_transfer_read, create_writer): Set initial ref_count to 2
	(one for soup-transfer, one for the caller).
	(soup_transfer_read_ref, soup_transfer_read_unref): ref/unref a
	reader
	(soup_transfer_read_stop): Clears the GIOChannel callbacks and
	drops soup-transfer's ref.
	(soup_transfer_read_cancel): Now just a stop+unref
	(soup_transfer_write_ref, soup_transfer_write_unref,
	soup_transfer_write_stop, soup_transfer_write_cancel): Similarly.

	* libsoup/soup-message.c (soup_message_cleanup): when setting up
	the "finish reading" callbacks, unref the reader so it will be
	destroyed once it's done reading.
	(soup_message_requeue): Likewise.

	* libsoup/soup-queue.c (soup_queue_read_headers_cb): Update for
	prototype change (no longer returns a SoupTransferDone).
	(soup_queue_read_chunk_cb): Likewise.

	* libsoup/soup-server.c (read_headers_cb): Likewise

2003-06-11  Dan Winship  <danw@ximian.com>

	* libsoup/soup-transfer.c: Change all functions to take a
	SoupReader * or SoupWriter * instead of a guint.

	* libsoup/soup-private.h (SoupMessagePrivate): make read_tag and
	write_tag pointers instead of guints.

2003-06-02  Chris Toshok  <toshok@ximian.com>

	* libsoup/soup-ssl.c: remove #include for soup-nss.h

2003-06-02  Chris Toshok  <toshok@ximian.com>

	* libsoup/Makefile.am (INCLUDES): remove NSS_CFLAGS.
	(libsoup_2_0_la_LIBADD): remove NSS_LIBS.
	(libsoup_2_0_la_SOURCES): remove soup-nss.[ch]

2003-06-02  Chris Toshok  <toshok@ximian.com>

	* configure.in: Bump version to 1.99.23.
